<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Eridanus 助理</string>
    <string name="server_url_hint">中转服务器地址 (Eridanus webui外部访问地址)</string>
    <string name="auth_token_hint">访问鉴权 Token (可选/若服务端启用)</string>
    <string name="bind_qq_hint">绑定的 QQ 号 (实现共享上下文记忆)</string>
    <string name="bot_name_hint">机器人名称 (默认: Eridanus)</string>
    <string name="start_floating_btn">开启屏幕悬浮球</string>
    <string name="stop_floating_btn">关闭屏幕悬浮球</string>
    <string name="test_connection">测试连接与同步</string>
    <string name="open_chat">打开助理聊天界面</string>
    <string name="btn_test_conn_text">测试连接</string>
    <string name="btn_reset_config_text">恢复默认</string>
</resources>
